# tar.bzl

./: .bazelignore  .bazelrc  .gitattributes  .pre-commit-config.yaml  .typos.toml  BUILD  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  tar.bzl
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bcr-presubmit.yaml  ci.yaml  publish.yaml  release.yaml  release_prep.sh  tag.yaml
docs/: BUILD  mtree.md  tar.md
e2e/smoke/: .bazelrc  BUILD  WORKSPACE.bazel
e2e/smoke/tools/: downloader.cfg
examples/: .bazelrc  MODULE.bazel  defs.bzl
examples/migrate-rules_pkg/: BUILD
examples/package_dir/: BUILD
tar/: BUILD  BUILD.bazel  extensions.bzl  mtree.bzl  repositories.bzl  tar.bzl
tar/private/: BUILD  compute_unused_inputs.awk  default.awk  modify_mtree.awk  preserve_symlinks.awk  tar.bzl  vis_canonicalize.gawk  vis_escape.gawk
tar/tests/: BUILD  asserts.bzl  cat_src_file.sh  change_mode.awk  compute_unused_inputs_test.sh  cross_linking_tree.bzl  dangling_symlink.bzl  expected13.mtree  expected14.mtree  whl_module.py
tar/tests/vis/: BUILD  encoding.bats
tar/toolchain/: BUILD  platforms.bzl  toolchain.bzl  versions.bzl
tar/toolchain/type/: BUILD
tools/: BUILD  preset.bazelrc
