# Override http_archive for local testing
local_repository(
    name = "tar.bzl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# tar.bzl setup #
######################
# Fetches the tar.bzl dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@tar.bzl//tar:repositories.bzl", "tar_bzl_dependencies")

tar_bzl_dependencies()

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()

# Register bazel-lib toolchains

aspect_bazel_lib_register_toolchains()
