# Override http_archive for local testing
local_repository(
    name = "tar.bzl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# tar.bzl dependencies #
######################
http_archive(
    name = "bazel_skylib",
    sha256 = "bc283cdfcd526a52c3201279cda4bc298652efa898b10b4db0837dc51652756f",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
    ],
)

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "db7da732db4dece80cd6d368220930950c9306ff356ebba46498fe64e65a3945",
    strip_prefix = "bazel-lib-2.19.3",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v2.19.3/bazel-lib-v2.19.3.tar.gz",
)

######################
# setup #
######################

load("@tar.bzl//tar:extensions.bzl", "create_repositories")

create_repositories()

register_toolchains("@bsd_tar_toolchains//:all")

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()

# Register bazel-lib toolchains

aspect_bazel_lib_register_toolchains()

load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
load("@platforms//host:extension.bzl", "host_platform_repo")

maybe(
    host_platform_repo,
    name = "host_platform",
)
