# Override http_archive for local testing
local_repository(
    name = "tar.bzl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

######################
# tar.bzl dependencies #
######################
http_archive(
    name = "bazel_skylib",
    sha256 = "bc283cdfcd526a52c3201279cda4bc298652efa898b10b4db0837dc51652756f",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.7.1/bazel-skylib-1.7.1.tar.gz",
    ],
)

http_archive(
    name = "aspect_bazel_lib",
    sha256 = "db7da732db4dece80cd6d368220930950c9306ff356ebba46498fe64e65a3945",
    strip_prefix = "bazel-lib-2.19.3",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v2.19.3/bazel-lib-v2.19.3.tar.gz",
)

http_archive(
    name = "bazel_lib",
    sha256 = "6fd3b1e1a38ca744f9664be4627ced80895c7d2ee353891c172f1ab61309c933",
    strip_prefix = "bazel-lib-3.0.0",
    url = "https://github.com/bazel-contrib/bazel-lib/releases/download/v3.0.0/bazel-lib-v3.0.0.tar.gz",
)

# Back-port https://github.com/bazelbuild/bazel-central-registry/blob/main/modules/gawk/5.3.2.bcr.1/source.json
# to WORKSPACE semantics
http_archive(
    name = "gawk",
    integrity = "sha256-+MNIZQnecFGSE4sA7ywAu73Q6Eww1cB9I/xzqdxMycw=",
    remote_file_integrity = {
        "BUILD.bazel": "sha256-dt89+9IJ3UzQvoKzyXOiBoF6ok/4u4G0cb0Ja+plFy0=",
        "posix/config_darwin.h": "sha256-gPVRlvtdXPw4Ikwd5S89wPPw5AaiB2HTHa1KOtj40mU=",
        "posix/config_linux.h": "sha256-iEaeXYBUCvprsIEEi5ipwqt0JV8d73+rLgoBYTegC6Q=",
    },
    remote_file_urls = {
        f: ["https://raw.githubusercontent.com/bazelbuild/bazel-central-registry/refs/heads/main/modules/gawk/5.3.2.bcr.1/overlay/" + f]
        for f in [
            "BUILD.bazel",
            "posix/config_darwin.h",
            "posix/config_linux.h",
        ]
    },
    strip_prefix = "gawk-5.3.2",
    urls = ["https://ftpmirror.gnu.org/gnu/gawk/gawk-5.3.2.tar.xz"],
)

######################
# setup #
######################

load("@tar.bzl//tar:extensions.bzl", "create_repositories")

create_repositories()

register_toolchains("@bsd_tar_toolchains//:all")

load("@aspect_bazel_lib//lib:repositories.bzl", "aspect_bazel_lib_dependencies", "aspect_bazel_lib_register_toolchains")

# Required bazel-lib dependencies

aspect_bazel_lib_dependencies()

# Register bazel-lib toolchains

aspect_bazel_lib_register_toolchains()

load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
load("@platforms//host:extension.bzl", "host_platform_repo")

maybe(
    host_platform_repo,
    name = "host_platform",
)
